--- a/pom.xml
+++ b/pom.xml
@@ -31,13 +31,15 @@
 
 
 <dependency>
-
 <groupId>org.apache.kafka</groupId>
-
 <artifactId>kafka_2.12</artifactId>
-
 <version>1.0.0</version>
+</dependency>
 
+<dependency>
+    <groupId>org.apache.hadoop</groupId>
+    <artifactId>hadoop-client</artifactId>
+    <version>2.6.0</version>
 </dependency>
 
 </dependencies>
@@ -75,7 +77,7 @@
 
 <manifest>
 
-<mainClass>com.dslab.kafkaApp.Entry</mainClass>
+<mainClass>com.dslab.kafka.app.Entry</mainClass>
 
 </manifest>
 
